spacing fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -182,7 +182,7 @@ body {
 .about_me {
   margin-top: 20px;
   color     : #fff;
-  text-align: center;
+  margin-left: 25px;
   font-size : 3vw;
   overflow  : hidden;
   position  : relative;
